[tool.poetry]
name = "flaky-demo"
version = "0.1.0"
description = ""
authors = ["ges <gerrit.schrader@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flaky = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.790"
black = "^20.8b1"
pytest-repeat = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
